fix overflow not showing on aboutme

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -113,10 +113,11 @@
     padding: 5rem;
     width: 22rem;
     height: 30rem;
-    position: absolute;
+    position: relative;
     left: calc(50% - 11rem);
-    top: 4rem; 
+    top: 2rem; 
     border-radius: 12rem 12rem 0 0;
+    margin-bottom: 100px;
 }
 
 .me__pic {
@@ -148,6 +149,9 @@
     .btn {
         margin-right: 10px;
     }
+    .me{
+        margin-bottom: 0px;
+    }
 }
 /* ============== Media Queries ( Small Devices ) =================== */
 
@@ -159,5 +163,8 @@
     .header__socials,
     .scroll__down {
         display: none;
+    }
+    .me{
+        margin-bottom: 0px;
     }
 }
